# video-analytics-engine

./: ENVIRONMENT.md  GETTING_STARTED.md  Makefile  README.md  docker-compose.yml
api-gateway/: Cargo.toml  Dockerfile
api-gateway/src/: auth.rs  config.rs  database.rs  error.rs  graphql.rs  main.rs  models.rs
api-gateway/src/middleware/: auth.rs  rate_limit.rs
api-gateway/src/services/: websocket.rs
infrastructure/sql/: init.sql
